# cvds

./: .gitattributes  .gitignore  README.md  pyproject.toml
pics/: 成都.jfif
src/cvds/: __init__.py
src/cvds/s1_mock_camera/ss1_download_poi/: download_poi.py  readme.md
src/cvds/s1_mock_camera/ss2_vis_poi/: readme.md  vis_poi.py  vis_poi_label.py
src/cvds/s1_mock_camera/ss3_mock_camera/: camera_boundary_final.html  camera_boundary_smart.html  camera_placement_full.html  cameras_boundary_final.xlsx  mock_camera_smart.py  readme.md  task.txt
src/cvds/s1_mock_camera/ss3_process_poi/: camera_placement_220k.html  camera_placement_full.html  cameras.xlsx  cameras_boundary_smart.xlsx  process_poi.py  process_poi_.py  process_poi__.py
src/cvds/s1_mock_camera/ss4_mock_camera_by_poi_and_roadnet/: cameras_all.xlsx  merge_and vis_cameras.py  task.txt
src/cvds/s2_mock_roadnet/ss3_find_path/: route_with_path.html
src/cvds/s2_mock_trajectory/ss1_download_districts/: download_districts.py  vis_districts.py
src/cvds/s2_mock_trajectory/ss1_download_roadnet/: download_roadnet.py  readme.md
src/cvds/s2_mock_trajectory/ss2_vis_roadnet/: readme.md  vis_roadnet.py
src/cvds/s2_mock_trajectory/ss3_find_path/: find_path.py
src/cvds/s2_mock_trajectory/ss3_mock_camera/: ss4_mock_camera.py  task.txt
src/cvds/s2_mock_trajectory/ss4_mock_camera/: ss4_mock_camera.py  ss4_mock_camera_.py
src/cvds/s3_mock_image/: similarity_distribution_image.py
src/cvds/s3_mock_image/distribution_sampled_data/: compare_vectors.py  synthesize_vectors.py  task.txt
(+64 files in other folders)
