[project]
name = "cvds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "libin", email = "xjd.binlee@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "haversine>=2.9.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "polyline>=2.0.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "spatialite>=0.0.3",
    "tqdm>=4.67.1",
]

[project.scripts]
cvds = "cvds:main"

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true



